--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "deployment",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=14.0.0"
+   },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
